fixed slideshow error, optimized css code by coding removing bootstrap and coded css external documents for all documents, re-ordered components

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,18 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <!-- <------------------------------------------Tailwind-CDN------ -->
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;400;700;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <!-- <-----------------font-family------------------->
     <script type="text/javascript" src="/path/to/jquery.js"></script>
-    <link rel="css" href="/src/App.css">
+    <link rel="css" href="/src/App.css" />
     <title>React App</title>
   </head>
   <body>
